# ipython-secrets

./: Pipfile  README.rst  conftest.py  ipython_secrets.py  ipython_secrets_test.py  jupyter_secrets.py  jupyter_secrets_test.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
docs/: Makefile  conf.py  index.rst
